<resources>
    <string name="app_name">WatchWise</string>
    <string name="watched_shows">Watched</string>
    <string name="parasite_title">Parasite</string>
    <string name="plan_to_watch">Plan to Watch</string>
    <string name="milestones">Milestones</string>
    <string name="blade_runner_2049_title">Blade Runner 2049</string>
    <string name="barbie_title">Barbie</string>
    <string name="the_bear_title">The Bear</string>
    <string name="you_title">You</string>
    <string name="the_boys_title">The Boys</string>
    <string name="average_rating">Avg Rating</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="watch_wise">WatchWise</string>
    <string name="no_password">You must enter a password to login.</string>
    <string name="no_email">You must enter an email to login.</string>
</resources>