<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="Profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_watched"
        android:icon="@drawable/watch_icon"
        android:title="@string/watched_shows"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_planning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/plan_to_watch_icon"
        android:title="@string/plan_to_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_milestones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/milestones"
        app:showAsAction="never" />
</menu>